Updated with resume page

--- a/resume.html
+++ b/resume.html
@@ -20,19 +20,15 @@
         <nav>
         	<ul>
         		<li><a href="index.html">Portfolio</a></li>
-        		<li><a href="about.html" class="selected">About</a></li>
-        		<li><a href="resume.html">Resume</a></li>
+        		<li><a href="about.html">About</a></li>
+        		<li><a href="resume.html" class="selected">Resume</a></li>
         		<li><a href="contact.html">Contact</a></li>
         	</ul>
         </nav>
     </header>
     <div id="wrapper">
 	    <section>
-	        <img src="images/em.jpg" alt="Emran Hosen Image" class="profile_photo">
-	        <h3>About me</h3>
-	        <p>Hi, I am Emran Hosen. I am a Front End Developer.This is my portfolio website. I share all of my favorite projects here.When I have a free time, I read history books and gossiping with my others.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on pur.</p>
-
-	        <p>If you want to follow me in Twitter, My username is <a href="#">emranict</a> and I am in Facebook <a href="#">Emran Hosen</a></p>
+	        
 	    </section>
     
 	    <footer>
