--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="index.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html" class="selected">Contact</a></li>
             </ul>
         </nav>
